# AI-Powered-Market-Research

./: .dockerignore  .env.example  .gitignore  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_UPDATE_COMPLETE.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  README_ERROR_HANDLING.md  app.py  docker-compose.yml  nginx.conf  package-lock.json  prometheus.yml  pyproject.toml  render.yaml  report.html  report.md  requirements.txt  requirements.txt    start.sh  test_error_handling.py
.streamlit/: config.toml  secrets.toml.example
diagrams/: agent_network.mmd  class_diagram.mmd  data_pipeline.mmd  retry_mechanism.mmd  system_flow.mmd  technical_flow.mmd
outputs/: Tesla.html  Tesla.md  bmw.html  google.html
src/api/: marketResearch.ts
src/components/: MarketResearchGenerator.tsx
src/market_research_agent/: crew.py  main.py
src/market_research_agent/config/: agents.yaml  tasks.yaml
src/marketresearcher/: BNY Mellon AI Proposal  app.py  crew.py  final_proposal.md  main.py  proposal.md  retry_llm.py
src/marketresearcher/config/: agents.yaml  llm.py  tasks.yaml  temp.yaml
src/marketresearcher/tools/: __init__.py  managed_file_writer.py
src/marketresearcher/utils/: __init__.py  output_manager.py
