[project]
name = "market_research_agent"
version = "0.1.0"
description = "Market-Research-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0",
    "exa-py>=1.12.1",
]

[project.scripts]
market_research_agent = "market_research_agent.main:run"
run_crew = "market_research_agent.main:run"
train = "market_research_agent.main:train"
replay = "market_research_agent.main:replay"
test = "market_research_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
